--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "school-management",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://web.engr.oregonstate.edu/~moncadae/cs340/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
@@ -16,6 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "npm run build && rsync -avz build/ flip.engr.oregonstate.edu:public_html/cs340/",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
