--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # db login stuff
-db_login_*.js
+db_login_*.cnf
 venv/
+
+.vscode
+/__pycache__
 
 # dependencies
 /node_modules
@@ -17,6 +20,7 @@ venv/
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
