--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # db login stuff
-db_login_*.cnf
+db_login_*
 venv/
 
 .vscode
