--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=9191 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "deploy": "npm run build && rsync -avz build/ moncadae@flip.engr.oregonstate.edu:public_html/cs340/",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
